<resources>
    <string name="app_name">Promille - Rechner</string>

    <!--Texte für das Startfragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unitWeight">kg</string>
    <string name="textWeight">Gewicht:</string>
    <string name="unitHeight">cm</string>
    <string name="textHeight">Größe:</string>
    <string name="textGender">Geschlecht:</string>
    <string name="genderRadioM">männlich</string>
    <string name="genderRadioW">weiblich</string>
    <string name="textDuration">Zeitraum des Alkoholkonsums:</string>
    <string name="textDurationUnit">Std.</string>
    <string name="textAlcohol">Menge des Alkoholkonsums:</string>
    <string name="textAlcoholtype">Art:</string>
    <string-array name="spinnerAlcoholtype">
        <item>Flasche Bier (0.33 l, 4,8 Vol.-%)</item>
        <item>Flasche Bier (0.5l, 4,8 Vol.-%)</item>
        <item>Glas Bier (0.2 l, 4,8 Vol.-%)</item>
        <item>Glas Bier (0.4l, 4,8 Vol.-%)</item>
        <item>Flasche Rotwein (0.75 l, 12.5 Vol.-%)</item>
        <item>Glas Rotweinein(0.2 l, 12.5 Vol.-%)</item>
        <item>Flasche Weißwein (0.75l, 11.5 Vol.-%)</item>
        <item>Glas Weißweinein(0.2 l, 11.5 Vol.-%)</item>
        <item>Flasche Sekt (0.75l, 12.5 Vol.-%)</item>
        <item>Glas Sekt(0.2 l, 12.5 Vol.-%)</item>
        <item>Cocktail (0.4l, 0.15 Vol.-%)</item>
        <item>Shot (4 cl, 0.4 Vol.-%)</item>
        <item>Shot (6 cl, 0.4 Vol.-%)</item>
    </string-array>
    <string name="textAlcoholQuantity">Anzahl:</string>
    <string-array name="spinnerAlcoholQuantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="buttonCalculate">Berechnen</string>
    <string name="inputErrorText">Bitte überprüfe alle Eingaben</string>

    <!--Texte für das Resultfragment-->
    <string name="textResultValue">1,5‰</string>
    <string name="buttonNewCalculation">Neue Berechnung</string>

    <!--Texte für das Helpfragment-->
    <string name="textInfoFormula">Widmarck-Formel:</string>
    <string name="textAsk">!</string>
    <string name="textInfoValue">Welche Werte darf ich eingeben?</string>
    <string name="textInfoResult">Was bedeutet mein Promille-Wert?</string>
    <string name="menu_start">Start</string>
    <string name="menu_help">Hilfe</string>
    <string name="menu_all">alle Ergebnisse</string>
    <string name="InfoTitleWidmarckFormel">Widmarck-Formel</string>
    <string name="InfoTitleAcceptedInputs">Gültige Werte</string>
    <string name="InfoTitlePromilleSkala">Promille-Werte</string>
    <string name="InfoWidmarckText">
        - Formel vom schwedische Chemiker Erik M. P. Widmark \n
                    - dient zur Bestimmung der theoretischen maximalen Blutalkoholkonzentration
                    \n
                    \n
                    w = A / (m * r) \n
                    w = der Masseanteil des Alkohols im Körper in ‰ \n
                    A = die aufgenommene Masse des Alkohols in Gramm (g) \n
                    m = die Masse der Person in Kilogramm (kg) \n
                    r = der Reduktions- oder Verteilungsfaktor im Körper: \n
                    bei Männer liegt dieser Wert zwischen: 0,68–0,7 \n
                    und bei Frauen: 0,55–0,60
    </string>
    <string name="InfoInputsText">

        Gewicht: \n - Angabe des Körpergewichts in kg \n
        - Dabei gibst du die Zahl ein, die bei dir auf der Waage steht \n
                \n
        Geschlecht: \n - wir unterscheiden hier zwischen männlich und weiblich, da die Berechnung derzeit nur dafür ausgelegt ist\n
                \n
        Dauer: \n - die Angabe ist in Std., dass heißt wenn du 1 Stunde Alkohol getrunken hast, gibst du 1 h ein\n
                \n
        Menge: \n - du hast die Auswahl zwischen verschiedenen gängigen Alkoholtypen, die voreingestellten Vol. Werte orientieren sich an den typischen Werten.\n

    </string>
    <string name="InfoPromilleText">

        0,1‰ - 0,3‰: \n
            - man ist kontaktfreudiger\n
            - man macht erste Fehler
            \n
            \n
            0,3‰ - 0,5‰: \n
            - verlangsamte Reaktion und Aufmerksamkeit \n
            - Risikobereitschaft steigt \n
            - man kann weniger sehen und hören
            - man schätzt Geschwindigkeite falsch ein
            \n
            \n
        0,5‰ - 0,8‰: \n
        - fehlende Konzentrationsfähigkeiten \n
            - verkleindertes Sichtfeld \n
            - deutlich schlechtere Reaktionszeit \n
            - Gleichgewichtsstörrungen
            \n
            \n
        1,0‰ - 2,0‰: \n
            - schlechtere Sehfähigkeit\n
            - kein Räumliches Sehen mehr \n
            - Sprach- Reaktions- und Gleichgewichtsprobleme sind sehr stark ausgeprägt \n
            - Orientierungslosigkeit
        \n
        \n
        2,0‰ - 3,0‰: \n
            - unkontrollierte bewegungen \n
            - Erbrechen \n
            - Filmriss ist vorprogrammiert \n
            - LEBENSGEFAHR vorallen bei Jugendliche
        \n
        \n
        ab 3,0‰: \n
            - LEBENSGEFAHR \n
            - Bewusstlosigkeit \n
            - Gefahren durch schwache Atmung

    </string>
    <string name="ok">ok</string>


    <string name="headLineAllResults">Alle Ergebnisse</string>
    <string name="alle_ergebnisse">Alle Ergebnisse</string>
    <string name="delete_all">Alles löschen</string>
    <string name="textTotalSumAlcoholUnit">g</string>
    <string name="textTotalSumAlcohol">Gesamtmenge Alkohol</string>
    <string name="textDone">✓</string>
    <string name="textDoneErrorText">Bitte gebe erst einen Wert ein bevor du ihn bestätigst!</string>
    <string name="promille">‰</string>



</resources>