<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWeight"
                style="@style/textStyle1"
                android:text="@string/textWeight" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textWeightInput"
                android:layout_width="@dimen/textInputFieldWidth"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_color"
                android:textSize="@dimen/textSize"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textWeightUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/unitWeight"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textHeight"
                style="@style/textStyle1"
                android:text="@string/textHeight" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textHeightInput"
                android:layout_width="@dimen/textInputFieldWidth"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary_color"
                android:textSize="@dimen/textSize"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/unitHeight"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textGender"
                style="@style/textStyle1"
                android:text="@string/textGender" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/gernderRadioM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genderRadioM"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize" />

                <RadioButton
                    android:id="@+id/genderRadioW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genderRadioW"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDuration"
                style="@style/textStyle1"
                android:text="@string/textDuration" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDurationInput"
                android:layout_width="@dimen/textInputFieldWidth"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/textDurationUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/marginEnd"
                android:text="@string/textDurationUnit"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textQuantity"
                style="@style/textStyle1"
                android:text="@string/textQuantity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:backgroundTint="@color/primary_color"
            android:text="@string/buttonCalculate" />

    </LinearLayout>
</layout>